scripts/K8s-AppGX29_Web-App-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appgx29-web-app-v2
  namespace: gx29
  annotations:
    kubernetes.io/change-cause: "genexus/gx29_web:2.0"
  labels:
    app: appgx29-web-app
    genby: genexus
    du: AppGX29_Web
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appgx29-web-app
      version: v2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: appgx29-web-app
        genby: genexus
        du: AppGX29_Web
        version: v2
    spec:
      containers:
      - image: genexus/gx29_web:2.0
        name: appgx29-web
        ports:
        - containerPort: 8080
          name: external-port
        imagePullPolicy: Always
