scripts/K8s-AppGX29_DB.yaml
apiVersion: v1
kind: Service
metadata:
  name: gx29-db
  namespace: gx29
  labels:
    app: gx29-db
    genby: genexus
spec:
  ports:
    - port: 3306
  selector:
    app: appgx29-db
    tier: db
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appgx29-db
  namespace: gx29
  annotations:
    kubernetes.io/change-cause: "genexus/gx29_db:1.0"  
  labels:
    app: appgx29-db
    genby: genexus
spec:
  selector:
    matchLabels:
      app: appgx29-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: appgx29-db
        genby: genexus
        tier: db
    spec:
      containers:
      - image: genexus/gx29_db:1.0
        name: gx29-db
        ports:
        - containerPort: 3306
          name: mysql-port
