scripts/K8s-AppGX29_Web-App.yaml
apiVersion: v1
kind: Service
metadata:
  name: appgx29-web-svc
  namespace: gx29
  labels:
    app: appgx29-web-svc
    genby: genexus
    du: AppGX29_Web
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: appgx29-web-app
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appgx29-web-app-v1
  namespace: gx29
  annotations:
    kubernetes.io/change-cause: "genexus/gx29_web:1.1"
  labels:
    app: appgx29-web-app
    genby: genexus
    du: AppGX29_Web
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: appgx29-web-app
      version: v1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: appgx29-web-app
        genby: genexus
        du: AppGX29_Web
        version: v1
    spec:
      containers:
      - image: genexus/gx29_web:1.1
        name: appgx29-web
        ports:
        - containerPort: 8080
          name: external-port
        imagePullPolicy: Always
