scripts/K8s-Apps_Mobile-App.yaml
apiVersion: v1
kind: Service
metadata:
  name: apps-mobile-svc
  namespace: gx29
  labels:
    app: apps-mobile-svc
    genby: genexus
    du: Apps_Mobile
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: apps-mobile-app
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apps-mobile-app
  namespace: gx29
  annotations:
    kubernetes.io/change-cause: "genexus/gx29_mobile:1.0"
  labels:
    app: apps-mobile-app
    genby: genexus
    du: Apps_Mobile    
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apps-mobile-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: apps-mobile-app
        genby: genexus
        du: Apps_Mobile
    spec:
      containers:
      - image: genexus/gx29_mobile:1.0
        name: apps-mobile
        ports:
        - containerPort: 8080
          name: external-port
        imagePullPolicy: Always
